# Manifest-InX

./: .gitattributes  .gitignore  ADAPTER_QUICKSTART.md  AI_INTEGRATION.md  API_CONTRACT.md  API_STABILITY.md  BACKLOG.md  CHANGELOG.md  CHANGE_POLICY.md  CI.md  CITATION.cff  CODE OF CONDUCT.md  CONTRIBUTING.md  DEMO.md  DETERMINISM.md  DETERMINISM_BOUNDARY.md  DOCS_INDEX.md  FAQ.md  GITHUB_RELEASE_CHECKLIST_v1.0.0.md  GITHUB_RELEASE_CHECKLIST_v1.0.2.md  GITHUB_SETTINGS_CHECKLIST.md  GOLDEN.md  LICENSE  MANIFEST.in  PACKAGING.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.2.md  ROADMAP.md  SECURITY.md  SUPPORT.md  _hashcheck.py  microinx_ci.yml  openapi_manifestinx_v1.yaml  openapi_microinx_v1.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: manifestinx_ci.yml  microinx_ci.yml
src/inxzap/: __init__.py  compat.py  demo.py
src/manifestinx/: __init__.py  api.py  cli.py  demo.py  engine.py  pack_system.py  run.py  template_pack_builder.py
src/manifestinx/data/: demo_trace_response.json  golden_cases_v1.json  manifestinx_manifest_v1.json  template_pack_source_v0_3.md
src/manifestinx/schemas/: pack_manifest_v0_1.json
src/microinx/: api.py  demo.py  engine.py  run.py  template_pack_builder.py
src/microinx/data/: golden_cases_v1.json  microinx_manifest_v1.json  template_pack_source_v0_3.md  templates_v0_3.json
tests/: __init__.py  test_manifestinx_api_contract.py  test_manifestinx_api_smoke.py  test_manifestinx_demo_smoke.py  test_manifestinx_engine.py  test_manifestinx_golden_regression.py  test_microinx_api_contract.py  test_microinx_api_smoke.py  test_microinx_demo_smoke.py  test_microinx_engine.py  test_microinx_golden_regression.py
tests/core/: test_engine_core.py
tests/fixtures/test_pack/: pack_manifest.json  payload.json
tests/pack_system/: test_cli_json.py  test_pack_system.py
tools/: lint_release.py  strip_sdist.py
