[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microinx"
version = "1.0.2"
description = "MicroInX v1.0 (deterministic BladeInsight engine + adapter + demo wrapper)"
requires-python = ">=3.8"
readme = "PACKAGING.md"
license = {text = "Proprietary"}
authors = [{name = "MicroInX"}]
dependencies = []

[project.scripts]
# Stable console surface: runs the one-command demo.
microinx-demo = "microinx.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Wheel-safe: ship manifest + templates inside the installed package.
"microinx" = ["data/*.json", "py.typed"]