[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifestinx"
version = "2.0.0"
description = "Manifest-InX deterministic engine (core-only) with Pack System v0.1"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "OneInX-Lab"}]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = []

[project.urls]
Repository = "https://github.com/OneInX/Manifest-InX"

[project.scripts]
manifestinx = "manifestinx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["manifestinx", "manifestinx.*"]

[tool.setuptools.package-data]
"manifestinx" = ["schemas/*.json", "py.typed"]
